--- a/package.json
+++ b/package.json
@@ -4,9 +4,13 @@
   "devDependencies": {
     "@commitlint/cli": "^12.1.4",
     "@commitlint/config-conventional": "^12.1.4",
+    "eslint": "^7.31.0",
+    "eslint-plugin-jest": "^24.3.6",
     "husky": "^7.0.1",
+    "jest": "^27.0.6",
     "lerna": "^4.0.0",
-    "prettier": "^2.3.2"
+    "prettier": "^2.3.2",
+    "typescript": "^4.3.5"
   },
   "workspaces": [
     "packages/*"
