--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -55,10 +55,6 @@
     "apollo": "^2.33.4",
     "babel-jest": "^27.0.6",
     "babel-loader": "^8.2.2",
-    "eslint": "^7.30.0",
-    "eslint-config-next": "^11.0.1",
-    "eslint-plugin-jest": "^24.3.6",
-    "jest": "^27.0.6",
-    "typescript": "^4.3.5"
+    "eslint-config-next": "^11.0.1"
   }
 }
