--- a/package.json
+++ b/package.json
@@ -2,21 +2,33 @@
   "name": "bag-of-holding",
   "private": true,
   "devDependencies": {
+    "@babel/core": "^7.14.6",
+    "@babel/preset-env": "^7.14.7",
     "@commitlint/cli": "^12.1.4",
     "@commitlint/config-conventional": "^12.1.4",
+    "@types/jest": "^26.0.24",
+    "babel-loader": "^8.2.2",
+    "cross-env": "^7.0.3",
     "eslint": "^7.31.0",
     "eslint-plugin-jest": "^24.3.6",
     "husky": "^7.0.1",
     "jest": "^27.0.6",
     "lerna": "^4.0.0",
+    "next": "^11.0.1",
     "prettier": "^2.3.2",
     "typescript": "^4.3.5"
   },
-  "workspaces": [
-    "packages/*"
-  ],
+  "workspaces": {
+    "packages": [
+      "packages/*"
+    ],
+    "nohoist": [
+      "**/babel-loader"
+    ]
+  },
   "scripts": {
     "dev": "yarn --cwd packages/app dev",
+    "dev:server": "yarn --cwd packages/server dev",
     "test": "lerna run test",
     "test:type": "lerna run test:type",
     "test:unit": "lerna run test:unit",
